<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="20dp"
    android:paddingBottom="20dp"
    android:layout_marginRight="16dp"
    android:layout_marginLeft="16dp"
    >

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/tv_review_author"
    android:text="@string/review_author"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/tv_review_author_value"
    tools:text="Sylvain"
    app:layout_constraintLeft_toRightOf="@id/tv_review_author"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_marginLeft="20sp"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_review_content"
        android:text="@string/review_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_review_author"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_review_content_value"
        tools:text="blablabla"
        app:layout_constraintTop_toBottomOf="@id/tv_review_author_value"
        app:layout_constraintLeft_toLeftOf="@id/tv_review_author_value"
        android:layout_marginLeft="20sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_review_url"
        android:text="@string/review_url"
        app:layout_constraintTop_toBottomOf="@id/tv_review_content_value"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_review_url_value"
        tools:text="http://pouetpouet.com/fzsfe/ggdfhe"
        app:layout_constraintLeft_toLeftOf="@id/tv_review_content_value"
        app:layout_constraintTop_toBottomOf="@id/tv_review_content_value"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@id/tv_review_url_value"
        android:layout_margin="20dp"/>
</android.support.constraint.ConstraintLayout>