<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_trailer_name_value"
        tools:text="Mon titre de film"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryDark"
        />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ib_trailer"
        android:onClick="playTrailer"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_trailer_name_value"
        app:layout_constraintLeft_toRightOf="@id/tv_trailer_name_value"
        app:layout_constraintRight_toLeftOf="@+id/tv_trailer_name_value"
        android:background="@drawable/ic_play_arrow_black_24dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ib_trailer"
        android:orientation="horizontal"
        android:id="@+id/labelsLayout"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/trailer_type"
            android:id="@+id/tv_trailer_type"
            android:layout_weight="1"
            android:textAlignment="center"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/trailer_site"
            android:layout_weight="1"
            android:textAlignment="center"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/trailer_size"
            android:id="@+id/tv_trailer_size"
            android:layout_weight="1"
            android:textAlignment="center"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_language"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/trailer_language"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/labelsLayout">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_trailer_type_value"
            tools:text="Trailer"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_trailer_site_value"
            tools:text="Youtube"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_trailer_size_value"
            tools:text="1080p"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_trailer_language_value"
            tools:text="en-US"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@id/labelsLayout"
        android:layout_margin="20dp"/>
</android.support.constraint.ConstraintLayout>